/*
 * $Id: ChangeLog,v 1.2310 2004/02/16 17:12:30 rodrigo_moreno Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-16 18:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/teditor.prg
    ! Fixed infinite loop when line length argument is <= 0

2004-02-16 14:00 UTC-0300 Rodrigo Moreno <rodrigo_moreno@yahoo.com>
  * contrib/pgsql
    * Minor changes, ISCHAR TO ISCHARACTER, see contrib/plgsql/Changelog

2004-02-15 21:12 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  + doc/gtinfo.txt
    + Some embrional documentation about the GTINFO system; will be merged
      with GTAPI to form a unique document about GT system.

  * include/gtinfo.ch
    + Some defintions, comments. Capability to read desktop size in characters.

  * source/rtl/gtwvt/gtwvt.c
    + GTINFO compliancy.

  * tests/gtinfo.prg
    * Layout/indentation.

2004-02-16 19:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapi.h
  * source/common/hbgete.c
    ! exporting hb_getenv()

  * source/rtl/gtcgi/gtcgi.c
  * source/rtl/gtstd/gtstd.c
  * source/rtl/gtwin/gtwin.c
  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtalleg/gtalleg.c
    ! fixes for compilation under Borland CPP with -DHB_MULTI_GT

2004-02-16 02:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * hrbdll.bc
  * hrbdll.vc
    + source/rtl/fparse.c
    + source/rtl/gtgraph.c

2004-02-16 01:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * contrib/rdd_ads/ads1.c
    - unused nvalue
  * contrib/rdd_ads/adsfunc.c
    * correct casts

2004-02-16 01:35 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
    * minor reorder
  * source/vm/macro.c
    * cast on xgrab call

2004-02-15 20:10 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprop.h
    * Corrected a typo in a comment.

  * source/vm/macro.c