@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2310 2004/02/16 17:12:30 rodrigo_moreno Exp $
+ * $Id: ChangeLog,v 1.2311 2004/02/17 02:36:46 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-02-17 02:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * contrib/rdd_ads/adsfunc.c
+    * BYTE -> UNSIGNED8 (just to be consistant)
 
 2004-02-16 18:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/teditor.prg
